fix UX text contrast issue

--- a/client/src/components/Intro.scss
+++ b/client/src/components/Intro.scss
@@ -82,6 +82,7 @@
     top: 5%;
     display: flex;
     max-width: 95%;
+    text-shadow: 1px 4px 3px rgba(0,0,0,0.2);
   }
   .slopeBegin,
   .slopeEnd {
@@ -161,6 +162,7 @@
     position: inherit;
     text-align: center;
     max-width: 80%;
+    text-shadow: 1px 4px 3px rgba(0,0,0,0.1);
   }
 
   .slopeBegin,
